# Mowed

./: .gitignore  CMakeLists.txt  README.md
assets/include/: grass.h  item.h  mower.h  player.h  render.h
include/: Shader.h  animation.h  gas-can.h  grass.h  item.h  mower.h  player.h  render.h  shed.h
include/player/: Player.h
libraries/SOIL2-master/src/SOIL2/: SOIL2.c  SOIL2.h  image_DXT.c  image_DXT.h  image_helper.c  image_helper.h  pvr_helper.h  stb_image.h  stb_image_write.h  stbi_pkm_c.h  stbi_qoi_write.h  wfETC.c  wfETC.h
src/: animation.cc  gas-can.cc  grass.cpp  item.cc  main.cpp  mower.cc  player.cpp  render.cpp  shed.cc
src/player/: Player.cpp
src/shaders/: core.frag  core.vs  vertices.txt
src/unused/: old_main.cpp
