cmake_minimum_required (VERSION 3.8)
project ("Mower")
add_definitions(-DGLEW_STATIC)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_PREFIX_PATH "libraries/glew/")
set(GLEW_INCLUDE_DIRS "libraries/glew/include")
find_library(GLEW_LIBRARIES glew32s PATHS "${CMAKE_CURRENT_SOURCE_DIR}/libraries/glew/lib/Release/x64")

include_directories(${GLEW_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS})
link_libraries(${GLEW_LIBRARIES})
find_package(GLEW REQUIRED)
set(CMAKE_PREFIX_PATH "libraries/SDL2")
set(CMAKE_MODULE_PATH "libraries/SDL2/cmake/sdl2-config.cmake")
find_package(SDL2 REQUIRED)
set(CMAKE_PREFIX_PATH "libraries/SDL2_image")
set(CMAKE_MODULE_PATH "libraries/SDL2_image/cmake/sdl2_image-config.cmake")
find_package(SDL2_image REQUIRED)
find_package(OpenGL REQUIRED)

add_executable(MowerExecutable "src/main.cpp" "include/Shader.h")

target_include_directories(MowerExecutable PUBLIC "include" ${SDL2_INCLUDE_DIRS})
target_link_libraries(MowerExecutable PRIVATE GLEW::GLEW ${OPENGL_gl_LIBRARY} ${SDL2_LIBRARIES} SDL2_image::SDL2_image)

add_custom_command(TARGET MowerExecutable POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:MowerExecutable> $<TARGET_FILE_DIR:MowerExecutable>
  COMMAND_EXPAND_LISTS
)

file(
	COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/shaders/core.frag
	DESTINATION ${CMAKE_BINARY_DIR}
	FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

file(
	COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/shaders/core.vs
	DESTINATION ${CMAKE_BINARY_DIR}
	FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

file(
	COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/shaders/vertices.txt
	DESTINATION ${CMAKE_BINARY_DIR}
	FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
file(
	COPY ${CMAKE_CURRENT_SOURCE_DIR}/assets/mower.jpg
	DESTINATION ${CMAKE_BINARY_DIR}
	FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

# Manually coping SDL_image.dll over as it did not work for others, strange.
file(
	COPY ${CMAKE_CURRENT_SOURCE_DIR}/libraries/SDL2/lib/x64/SDL2.dll
	DESTINATION ${CMAKE_BINARY_DIR}
	FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
file(
	COPY ${CMAKE_CURRENT_SOURCE_DIR}/libraries/SDL2_image/lib/x64/SDL2_image.dll
	DESTINATION ${CMAKE_BINARY_DIR}
	FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)